Fixing logo behaviour on small devices

--- a/src/components/main/MainNavigation.module.css
+++ b/src/components/main/MainNavigation.module.css
@@ -35,7 +35,7 @@
   background-color: #8d1d1d;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   color: white;
-  z-index: 1;
+  z-index: 4;
   cursor: pointer;
 }
 
@@ -112,6 +112,6 @@
 
   .logo {
     height: 23rem;
-    width: fit-content;
+    width: auto;
   }
 }
